# bidmart

./: .env.example  .gitignore  Caddyfile  README.md  docker-compose.yml  package-lock.json
apps/bidmart-auction/: .env.example  .gitignore  Cargo.toml  README.md
apps/bidmart-auction/.sqlx/: query-02c511bdb5559faee0f5fc65398d284de144924c84408ebd70c1a794d63b73f7.json  query-05c51bcd5accfb2ec2e91332b100e7bf61a0835784f612c51ee524f4013adabf.json  query-444c473c9dfa0a53120b907808746ec870f2052d18c688ca11787fc2389bb840.json  query-494d67fe4e6d71567b3016a6e719edc040680eaa43ac49e4f28811cc3b832b59.json  query-66860140b4e791000c616c57c0a7347c2323060137f544e7475987dee84a1089.json  query-6e2c988418c5d3e83488caa4301bb201a6a0abb87ae8d76ac40103521c0a81b7.json
apps/bidmart-auction/migrations/: 20260306_create_bids.sql
apps/bidmart-auction/src/: lib.rs  main.rs
apps/bidmart-auction/src/adapter/: mod.rs
apps/bidmart-auction/src/adapter/http/: error.rs  handlers.rs  mod.rs  routes.rs
apps/bidmart-auction/src/adapter/repository/: mod.rs  placeholder_bid_repository.rs  postgres_bid_repository.rs  postgres_listing_repository.rs
apps/bidmart-auction/src/app/: dto.rs  error.rs  get_highest_bid.rs  mod.rs  place_bid.rs  register_listing.rs
apps/bidmart-auction/src/config/: app_config.rs  config.rs  database.rs  mod.rs
apps/bidmart-auction/src/domain/: bid.rs  bid_validator.rs  error.rs  listing.rs  mod.rs  types.rs
apps/bidmart-auction/src/port/: bid_repository.rs  listing_repository.rs  mod.rs
apps/bidmart-auction/src/shared/: mod.rs  types.rs
infra/: README.md  init-db.sql  (+5 more)
(+469 files in other folders)
