[package]
name = "bidmart-auction"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"

async-trait = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"

sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "uuid", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15.7"
